<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".fragment.LoginFragment">

<ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:src="@drawable/blury_background"
    android:scaleType="centerCrop"/>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_kleine_shape"
        android:drawablePadding="6dp"
        android:text="@string/app_name1"
        android:textStyle="bold"
        style="@style/h3"
        app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="110dp"/>

    <TextView
        android:id="@+id/tvRightAddForShopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h4"
        android:layout_marginTop="15dp"
        android:text="@string/LetsLogin"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
        app:layout_constraintTop_toBottomOf="@id/appName"/>


    <TextView
        android:id="@+id/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h2"
        android:text="@string/Dont_Have_account"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
        app:layout_constraintTop_toBottomOf="@id/tvRightAddForShopping"

        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittextHeight"
        app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
        app:layout_constraintTop_toBottomOf="@+id/Register"
        style="@style/editText"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittextHeight"
        app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        style="@style/editText"
        android:hint="Password"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"/>


    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h2"
        android:text="@string/forgot"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        android:textColor="@color/black"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/LoginButton"
        style="@style/blueButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/mediumButtonHeight"
        android:text="@string/LoginButton"
        app:layout_constraintStart_toStartOf="@+id/guidelineloginLeft"
        app:layout_constraintEnd_toEndOf="@+id/guidelineLoginRight"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
        android:layout_marginTop="15dp"
        />


    <ImageView
        android:id="@+id/faceBookLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/facebook_login"
        app:layout_constraintStart_toStartOf="@+id/guidelineloginLeft"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton"
        android:layout_marginTop="13dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Facebook"
        app:layout_constraintStart_toStartOf="@id/faceBookLogin"
        app:layout_constraintTop_toTopOf="@id/faceBookLogin"
        app:layout_constraintBottom_toBottomOf="@id/faceBookLogin"
        app:layout_constraintEnd_toEndOf="@id/faceBookLogin"/>

    <ImageView
        android:id="@+id/googleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/google_login"
        app:layout_constraintEnd_toEndOf="@+id/guidelineLoginRight"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton"
        android:layout_marginTop="13dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Google"
        app:layout_constraintStart_toStartOf="@id/googleLogin"
        app:layout_constraintTop_toTopOf="@id/googleLogin"
        app:layout_constraintBottom_toBottomOf="@id/googleLogin"
        app:layout_constraintEnd_toEndOf="@id/googleLogin"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineloginLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLoginRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.91"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>