<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".fragment.RegisterFragment">

<ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:src="@drawable/blury_background"
    android:scaleType="centerCrop"/>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_kleine_shape"
        android:drawablePadding="6dp"
        android:text="@string/app_name1"
        android:textStyle="bold"
        style="@style/h3"
        app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
        android:layout_marginTop="110dp"/>

    <TextView
        android:id="@+id/tvRightAddForShopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h4"
        android:layout_marginTop="15dp"
        android:text="Let's Register"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
        app:layout_constraintTop_toBottomOf="@id/appName"
        app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"/>


    <TextView
        android:id="@+id/LoginTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h2"
        android:text="@string/already"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
        app:layout_constraintTop_toBottomOf="@id/tvRightAddForShopping"
        app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
        />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittextHeight"
        app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
        app:layout_constraintTop_toBottomOf="@+id/LoginTv"
        style="@style/editText"
        android:hint="First Name"
        android:layout_marginTop="20dp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittextHeight"
        app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName"
        style="@style/editText"
        android:hint="Last Name"
        android:inputType="text"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittextHeight"
        app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
        app:layout_constraintTop_toBottomOf="@+id/etLastName"
        style="@style/editText"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittextHeight"
        app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        style="@style/editText"
        android:hint="Password"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        style="@style/blueButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/mediumButtonHeight"
        android:text="@string/registerButton"
        app:layout_constraintStart_toStartOf="@+id/guidelineloginLeft"
        app:layout_constraintEnd_toEndOf="@+id/guidelineLoginRight"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        android:layout_marginTop="15dp"
        />




    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineloginLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLoginRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.91"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>